# sonolus-login-poc

./: docker-compose.yml  nginx.conf  readme.md
backend/: .env.example  Dockerfile  main.py  publickey.py  pyproject.toml
backend/translations/: main.en.yml  main.ja.yml
frontend/: .env.example  .env.production  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/: Header.tsx
frontend/lib/: const.ts  i18n.ts  session.ts
frontend/pages/: _app.tsx  index.tsx  login.tsx  logout.tsx
frontend/pages/api/: [...all].ts
frontend/styles/: globals.css
